# vanuatu-alerts

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.development.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
vanuatu_alerts/: config.py  main.py
vanuatu_alerts/plugins/: base.py  cyclone.py  earthquake.py  holiday.py  tsunami.py
